change structure of html put changes in body
add new style to buttons
center the forms flexbox container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Forms</title>
 </head>
 <body>
-    <main class="mainbox">
+    <main>
         <form class="form" autocomplete="off">
             <h1 class="headtext">Save the Trees!</h1>
             <h3 class="headtext">Sign our petiton <br> as a reward we plant a tree of your choice!</h3>
