--- a/index.html
+++ b/index.html
@@ -17,9 +17,20 @@
         <form class="form" autocomplete="off">
             <h1 class="headtext">Save the Trees!</h1>
             <h3 class="headtext">Sign our petiton <br> as a reward we plant a tree of your choice!</h3>
+            <label for="name" class="label">Full name:</label>
             <input type="text" id="name" name="name" class="form-in" placeholder="Enter your name here.">
+            <label for="email" class="label">Email Adress:</label>
             <input type="email" id="email" name="email" class="form-in" placeholder="Enter your E-Mail here." required>
+            <label for="password" class="label">4 Digit Pincode:</label>
             <input type="password" id="password" name="password" class="form-in" placeholder="Enter the 4 digit pincode!" required minlength="4" maxlength="4" inputmode="numeric">
+            <label for="select">Select your tree to plant!</label>
+            <select name="select" id="select">
+                <option value="Oak">Oak</option>
+                <option value="Birch">Birch</option>
+                <option value="Chestnut">Chestnut</option>
+                <option value="Pinetree">Pinetree</option>
+                <option value="Walnut">Walnut</option>
+            </select>
             <div>
                 <button type="submit">Submit</button><button type="reset">Reset</button>
             </div>
