--- a/index.html
+++ b/index.html
@@ -10,27 +10,38 @@
     <link rel="stylesheet" href="styles/styles.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-    <title>Forms</title>
+    <!-- My amazing Fontawesome icons <3 -->
+    <script src="https://kit.fontawesome.com/26aa5150aa.js" crossorigin="anonymous"></script>
+    <title>Save the Trees</title>
 </head>
 <body>
     <main>
         <form class="form" autocomplete="off">
-            <h1 class="headtext">Save the Trees!</h1>
-            <h3 class="headtext">Sign our petiton <br> as a reward we plant a tree of your choice!</h3>
-            <label for="name" class="label">Full name:</label>
-            <input type="text" id="name" name="name" class="form-in" placeholder="Enter your name here.">
-            <label for="email" class="label">Email Adress:</label>
-            <input type="email" id="email" name="email" class="form-in" placeholder="Enter your E-Mail here." required>
-            <label for="password" class="label">4 Digit Pincode:</label>
-            <input type="password" id="password" name="password" class="form-in" placeholder="Enter the 4 digit pincode!" required minlength="4" maxlength="4" inputmode="numeric">
-            <label for="select">Select your tree to plant!</label>
-            <select name="select" id="select">
-                <option value="Oak">Oak</option>
-                <option value="Birch">Birch</option>
-                <option value="Chestnut">Chestnut</option>
-                <option value="Pinetree">Pinetree</option>
-                <option value="Walnut">Walnut</option>
-            </select>
+            <i class="fa-solid fa-tree fa-lg" style='color:#2a7e19'></i>
+            <i class="fa-solid fa-seedling fa-2xl" style='color:#2a7e19'></i>
+            <i class="fa-solid fa-tree fa-lg" style='color:#2a7e19' ></i>
+            <h1 class="textstylish">Save the Trees!</h1>
+            <h2 class="textstylish">Plant a Seed!</h2>
+            <h3 class="textstylish">Sign our petiton <br> as a reward we plant a tree of your choice!</h3>
+            <label for="name" class="textstylish">Full name:</label>
+            <input type="text" id="name" name="name" class="boxstyle" placeholder="Enter your name here.">
+            <label for="email" class="textstylish">Email Adress:</label>
+            <input type="email" id="email" name="email" class="boxstyle" placeholder="Enter your E-Mail here." required>
+            <label for="password" class="textstylish">Enter your super secret 5 Digit postalcode!</label>
+            <input type="password" id="password" name="password" class="boxstyle" placeholder="Enter your 5 digit postcode!" required minlength="5" maxlength="5" inputmode="numeric">
+            <div class="pimpmy--list" >
+                <label for="select" class="textstylish">Select your tree to plant!</label>
+                <select name="select" id="select" class="list">
+                    <option value="Oak">Oak</option>
+                    <option value="Birch">Birch</option>
+                    <option value="Chestnut">Chestnut</option>
+                    <option value="Pinetree">Pinetree</option>
+                    <option value="Walnut">Walnut</option>
+                    <option value="Apple">Apple</option>
+                </select>
+            </div>
+            <label for="message" class="textstylish">Write a message:</label>
+            <textarea name="message" id="message" cols="30" rows="4" class="textarea boxstyle" placeholder="Talk your heart!"></textarea>
             <div>
                 <button type="submit">Submit</button><button type="reset">Reset</button>
             </div>
